--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -10,8 +10,7 @@
     <section id="addTask">
       <form>
         <input type="text" id="task" name="taskInput" placeholder="Add a Task">
-        <button type="button"
-         id="addTaskBtn">
+        <button type="button" id="addTaskBtn">
           <div id="line-wrapper">
             <div id="horizontal"></div>
             <div id="vertical"></div>
