--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -17,9 +17,20 @@
           </div>
         </button>  
       </form>
-    </section>
-    <section id="showAndComplete">
       <ul id="taskList">
+        <li>
+          <input type="checkbox"> 
+          <label>Mleko</label>
+        </li>
+        <li>
+          <input type="checkbox"> 
+          <label>Kawa</label>
+        </li>
+        <li>
+          <input type="checkbox"> 
+          <label>Hierbata</label>
+          
+        </li>
       </ul>
     </section>
     <section id="removeTask"></section>
