--- a/src/client/styles/style.css
+++ b/src/client/styles/style.css
@@ -48,7 +48,7 @@ form {
   font-family: 'Space Grotesk', sans-serif;
 }
 
-#addTaskBtn { /* button with plus sign*/
+#addTaskBtn { /* button with plus sign form https://www.youtube.com/watch?v=xug428_PyQ0 */
   grid-area: taskBtn;
   background-color: rgb(245, 93, 62);
   border: none;
@@ -78,11 +78,10 @@ form {
 }
 
 #taskList {
-  grid-area: list;
+  /* grid-area: list; */
   justify-self: center;
   width: 25em;
   margin-top: 2em;
-  margin-bottom: 2em;;
   outline: 2px solid rgb(255, 0, 140);;
 }
 
@@ -95,7 +94,7 @@ form {
   height: 2.5em;
   border-radius: 5px;
   display: grid;
-  grid-template-columns: 1em auto;
+  grid-template-columns: 1em auto 30px;
   gap: 0.5em;
   background-color: rgba(98, 131, 149, 0.781);
 }
@@ -104,14 +103,14 @@ input[type="checkbox"] { /* checkbox styling from https://moderncss.dev/pure-css
   appearance: none;
   background-color: #fff; 
   margin: 0; 
-  /* to remove defoult styling of check boxes */
+  /* to remove default styling of check boxes */
   font: inherit;
   color: rgba(15, 64, 90, 0.781);;
   width: 1.15em;
   height: 1.15em;
   border: 0.13em solid currentColor;
   border-radius: 0.15em;
-  /* transform: translateY(-0.075em);  moves checkbox a bit higher to make one line with a label */
+  transform: translateY(-0.075em);  /*moves checkbox a bit higher to make one line with a label */
   display: grid;
   place-content: center;
 }
@@ -130,4 +129,25 @@ input[type="checkbox"]:checked::before { /* checkbox styling from https://modern
   transform: scale(1);
 }
 
-/* var(--form-control-color);*/
+/*delete button styling https://codepen.io/jcsb/pen/qzPyRV */
+
+.btn-delete {
+  align-items: center;
+  background: none;
+  border: none;
+  padding: 0;
+  cursor: pointer;
+  color: rgb(255, 166, 0);
+  border: none;
+}
+.btn-delete > .delete_button_hovered {
+  display: none;
+}
+
+.btn-delete:hover > .delete_button_hovered {
+  display: block;
+}
+.btn-delete:hover > .delete_button {
+  display: none;
+}
+
